deployment/it-compass-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-compass
spec:
  replicas: 2
  selector:
    matchLabels:
      app: it-compass
  template:
    metadata:
      labels:
        app: it-compass
    spec:
      containers:
      - name: it-compass
        image: portfolio-system-architect:it-compass
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: it-compass
spec:
  selector:
    app: it-compass
  ports:
  - port: 8501
    targetPort: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-compass
spec:
  rules:
  - host: it-compass.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-compass
            port:
              number: 8501
